--- a/FA3/external_registration.css
+++ b/FA3/external_registration.css
@@ -1,38 +1,121 @@
-*{
-    font-family: Arial, Helvetica, sans-serif;
+* {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: #f2f2f2;
+    margin: 0;
+    padding: 0;
 }
 
-.form-container{
-    margin: auto;
-    width: 40%;
-    border: 2px solid black;
+.form-container {
+    background-color: #fff;
+    border: 1px solid #ccc;
     border-radius: 5px;
-    padding: 0px 10px 15px 10px;
-    /* padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 15px; */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 50px auto;
+    max-width: 500px;
+    padding: 20px;
 }
 
-.form-control{
-    margin-bottom: 5px;
+.form-header {
+    text-align: center;
+    margin-top: 0;
+    padding-top: 10px;
 }
 
-input[type="text"]{
+.header-line {
     width: 100%;
+    border-top: 3px solid #000000;
+    margin-top: 20px;
+    margin-bottom: 15px;
 }
 
-button[type="submit"]{
+.subheader {
+    text-align: center;
+    font-size: 1.2em;
+    margin-top: 15px;
+    padding-top: 10px;
+}
+
+.form-section {
+    margin-bottom: 20px;
+}
+
+.form-control {
+    margin-bottom: 10px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+input[type="text"] {
+    width: calc(100% - 20px);
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+.buttons {
+    text-align: center;
+}
+
+button {
+    padding: 10px 20px;
     border: none;
     border-radius: 3px;
-    padding: 5px;
-    color: white;
-    background-color: blue;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
 
-button[type="submit"]:hover{
-    background-color: rgb(86, 86, 255);
+button[type="submit"] {
+    background-color: #1f6dff;
+    color: #fff;
+    margin-right: 10px;
 }
 
-button[type="button"]{
-    background-color: red;
+button[type="submit"]:hover {
+    background-color: #0c4dbf;
+}
+
+button[type="button"] {
+    background-color: #ff3333;
+    color: #fff;
+}
+
+button[type="button"]:hover {
+    background-color: #cc0000;
+}
+
+.additional-info-section {
+    margin-top: 20px;
+}
+
+.additional-info-section .subheader {
+    text-align: center;
+    font-size: 1.2em;
+    margin-top: 15px;
+    padding-top: 10px;
+}
+
+.additional-info-section .form-control {
+    margin-bottom: 20px;
+}
+
+.additional-info-section .input-group label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.additional-info-section .input-group input,
+.additional-info-section .input-group select {
+    width: calc(100% - 20px);
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+.additional-info-section .input-group select {
+    appearance: none;
 }
