--- a/FINALS/product-detail.css
+++ b/FINALS/product-detail.css
@@ -1,6 +1,3 @@
-/* product-detail.css */
-
-/* Body styles for background image */
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -15,11 +12,10 @@ body {
     overflow-x: hidden;
 }
 
-/* Header styles */
 header {
     padding: 20px;
     display: flex;
-    justify-content: center; /* Center align content within the header */
+    justify-content: center; 
     align-items: center;
     background: transparent;
     width: 100%;
@@ -30,7 +26,7 @@ header {
     border-radius: 20px;
     padding: 10px 20px;
     display: flex;
-    justify-content: space-between; /* Ensure logo and nav links are spaced apart */
+    justify-content: space-between; 
     align-items: center;
     width: 80%;
     max-width: 1200px;
@@ -112,15 +108,15 @@ nav ul li a {
 }
 
 .product-item img {
-    width: 50px; /* Adjust the width as needed */
+    width: 50px; 
     height: auto;
-    margin-right: 10px; /* Margin between image and text */
+    margin-right: 10px; 
 }
 
 .product-item p {
     margin: 0;
     line-height: 1.6;
-    text-align: left; /* Align text to the left */
+    text-align: left;
 }
 
 .product-details-container .price {
